crates/jarl/tests/integration/snapshots/integration__assignment_op__assignment_wrong_value_from_cli-2.snap
---
source: crates/jarl/tests/integration/assignment_op.rs
expression: "&mut\nCommand::new(binary_path()).current_dir(directory).arg(\"check\").arg(\".\").arg(\"--assignment-op\").arg(\"1\").run().normalize_os_executable_name()"
---
success: false
exit_code: 255
----- stdout -----

----- stderr -----
jarl failed
  Cause: Invalid value in `--assignment-op`: 1

----- args -----
check . --assignment-op 1
